Fix alignment of toolbar line

--- a/bookdown/assets/style.css
+++ b/bookdown/assets/style.css
@@ -127,7 +127,17 @@ h1,h2,h3,h4,h5,h6 {
   color: #ec7a47;
 }
 
+/* The next two rules make the horizontal line go straight across in top navbar */
 
+.summary > li:first-child {
+  height: 50px;
+  padding-top: 10px;
+  border-bottom: 1px solid rgba(0,0,0,.07);
+}
+
+.book .book-summary ul.summary li.divider {
+  height: 0px;
+}
 
 /* Hide the automatically generated book title */
 h1.title{
